tests/error/type_errors/unary_not_arith.py
from guppylang.decorator import guppy


@guppy(compile=True)
def foo() -> int:
    return -True
